--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -52,6 +52,19 @@
 </header>
 {% block content %}
 {% endblock %}
+<footer class="bg-body-tertiary text-center">
+    <div class="container">
+        <div>
+            <ul class="footer-nav">
+                <li class="footer-nav__item"><a href="{% url 'about' %}">О нас</a></li>
+                <li class="footer-nav__item"><a href="{% url 'catalog' %}">Каталог</a></li>
+                <li class="footer-nav__item"><a href="{% url 'politics' %}">Политика</a></li>
+                <li class="footer-nav__item"></li>
+            </ul>
+        </div>
+    </div>
+    </div>
+</footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
